amazonResponseはamazonと役割が重複しているので削除
